# AphasiaSpeechEval

./: README.md  main.py  pyproject.toml
aphasia_speech_eval/: __init__.py  constants.py
aphasia_speech_eval/models/: __init__.py  benchmark.py  session.py  types.py
aphasia_speech_eval/modules/: chat_file_parser.py
aphasia_speech_eval/utils/: chat_utils.py
tests/models/: test_benchmark.py  test_chat_file_parser.py  test_session.py  test_types.py
tests/test_data/: __init__.py  benchmark.cha  benchmark1.cha  benchmark1_diff1.cha  benchmark1_diff2.cha  benchmark1_diff3.cha  falseStart.cha  jargon.cha  meanLength.cha  overlaps.cha  pauses_fillers.cha  postcodes.cha  simple.cha  supersimple.cha  supersimple_diff.cha  terminators.cha  trailing_off.cha  unintelligible.cha  valueError_participants.cha  wordErrors.cha
